--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" style="width:100%; height:100%;">
+<html>
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
   <title>Isabelle A. Tan's CV/Resume</title>
