--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Isabelle A. Tan's CV/Resume</title>
-</head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/iat2111/cv/blob/master/CV%202.0.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+  <head>
+    <title>Isabelle A. Tan's CV/Resume</title>
+  </head>
+  <body>
+    <h1>How to disable downloading of the PDF document</h1>
+    <iframe src="https://docs.google.com/gview?url=https://github.com/iat2111/cv/blob/master/CV%202.0.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0">
+    </iframe>
   </body>
 </html>
